# skimbleshanks

./: .env.example  .gitignore  ISSUES.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 기능-제안.md  버그-리포트.md  프로젝트-개선.md
.github/workflows/: ci.yml  deploy-frontend.yml
docs/: ARCHITECTURE.md  EXPERT_GUIDE.md
frontend/: index.html  package-lock.json  package.json  style.css  vite.config.js  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.js  main.jsx  main.tsx
frontend/src/app/: App.test.tsx  App.tsx  style.css
frontend/src/components/: ApiSettings.tsx  LogViewer.jsx  LogViewer.tsx  Modal.jsx  Modal.tsx  PassengerSelect.jsx  PassengerSelect.tsx  SearchForm.jsx  SearchForm.tsx  SettingsCard.jsx  SettingsCard.tsx  Toast.jsx  Toast.tsx  TrainList.jsx  TrainList.tsx
frontend/src/shared/api/: api.ts  types.ts  uiStore.test.ts  (+1 more)
frontend/src/store/: authStore.ts  logStore.ts  railStore.ts  uiStore.ts
frontend/src/test/: api.test.ts  setup.ts
scripts/: dev.py
src/: __init__.py  constants.py
src/adapters/: __init__.py  rail.py
src/api/: app.py
src/cli/: main.py
src/flows/: __init__.py  booking.py  common.py  reservation.py
src/providers/: __init__.py  ktx.py  srt.py
src/services/: __init__.py  config_store.py  logger.py  notifications.py  rail_service.py  retry_policy.py
src/utils/: retry.py
tests/: conftest.py  test_api.py  test_cli.py  test_common_flows.py  test_config_store.py  test_flows.py  test_notifications.py  test_rail.py  test_retry_policy.py  test_srt.py  test_utils.py
(+30 files in other folders)
